update hayward for biblio

--- a/html/zoomcasts/hayward-reeder-brice.html
+++ b/html/zoomcasts/hayward-reeder-brice.html
@@ -83,6 +83,18 @@
           <p>Michelle Prain Brice is a Professor of Literature at Universidad Adolfo Ibáñez, Chile. She earned her Ph.D. in Literature and Cultural Studies at Pontificia Universidad Católica de Valparaíso, Chile with the support of a CONICYT grant. She obtained her M.A. in Comparative Literature at the Universidad de Chile and a professional degree in Journalism at Universidad Adolfo Ibáñez. As a journalist, she has worked for <em>El Mercurio</em> newspapers in the literary and cultural sections, where she has published several interviews and articles. Among her academic publications is the book <em>Legado Británico en Valparaíso/British Legacy in Valparaíso</em> (Ril editores, Santiago, 2011), academic articles, and book chapters on the British presence in Chile. She was a Researcher Residence at the British Library in December 2019. With Jennifer Hayward and Jessie Reeder, she was awarded Eileen Curran Field Development Grant by the the Research Society for Victorian Periodicals, for digitizing British-Chilean nineteenth century periodicals and creating a digital public archive.</p>
 				</section>
 
+				<summary aria-labelledby="reading">
+					<h3 id="reading">Further Reading</h3>
+				
+					<p>Aguirre, Robert D. <em>Informal Empire: Mexico and Central American in Victorian Culture</em>. University of Minnesota Press, 2004.</p>
+
+					<p>Edmundson, William. <em>A History of the British Presence in Chile: From Bloody Mary to Charles Darwin and the Decline of British Influence</em>. Palgrave Macmillan, 2009.</p>
+
+					<p>Graham, Maria. <em>Journal of a Residence in Chile During the Year 1822, and a Voyage from Chile to Brazil in 1823</em>. Edited by Jennifer Hayward, University of Virginia Press, 2003.</p>
+
+					<p>Woods, David J. <em>Valparaiso Bound! European Pioneers on the Pacific Coast of South America</em>. Librería y Editorial Ricaaventura E.I.R.L., 2016.</p>
+				</summary>
+
 				<section aria-labelledby="citation">
 					<h3 id="citation">Page/Zoomcast Citation (MLA)</h3>
 					<p>“Zoomcast with Jennifer Hayward, Jessie Reeder & Michelle Prain Brice.” Hosted by Ryan Fong. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/zoomcasts/hayward-reeder-brice.html">https://undiscipliningvc.org/html/zoomcasts/hayward-reeder-brice.html</a>.</p>
