--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -66,7 +66,7 @@
 					<h2 id="seacole-2">Mary Seacole and the Caribbean #2</h2>
 					<ul>
 						<li>Lesson Plans</li>
-						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Decentering Britishness</a></li>
+						<li><a href="/html/lesson_plans/seacole_decentering_britishness.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Decentering Britishness</a></li>
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Autobiographical Writing</a></li>
 						<li><a href="/html/lesson_plans/seacole_recentering_nursing.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Recentering Nursing in Wartime</a></li>
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Decolonizing Health(care)</a></li>
