update template for bio

--- a/html/lesson_plans/lesson-plan-template.html
+++ b/html/lesson_plans/lesson-plan-template.html
@@ -71,6 +71,7 @@
                   <li><a href="#materials-5">Further Reading</a></li>
                 </ol>
               </li>
+							<li><a href="#biography">Pathway Developer Biography</a></li>
               <li><a href="#citation">Lesson Plan Citation (MLA)</a></li>
             </ol>
           </section>
@@ -117,7 +118,7 @@
               <h4 id="subtheme-3"></h4><!-- Change -->
               <p><strong>Recommended Texts (full references below):</strong> </p><!-- Change -->
 
-              <p><strong>Summary:</strong> </p><!-- Change -->
+              <p><strong>Summary:</strong> </p>
             </section>
 
 					</section>
@@ -155,6 +156,11 @@
 
             <section aria-labelledby="materials-5">
               <h4 id="materials-5">Further Reading</h4>
+
+            </section>
+
+						<section aria-labelledby="biography">
+              <h4 id="biography">Pathway Developer Biography</h4>
 
             </section>
 
