update decentering for bio

--- a/html/lesson_plans/seacole_decentering_britishness.html
+++ b/html/lesson_plans/seacole_decentering_britishness.html
@@ -68,6 +68,7 @@
                   <li><a href="#materials-5">Further Reading</a></li>
                 </ol>
               </li>
+							<li><a href="#biography">Pathway Developer Biography</a></li>
               <li><a href="#citation">Lesson Plan Citation (MLA)</a></li>
             </ol>
           </section>
@@ -189,8 +190,12 @@
 							
 							<p>Olusoga, David. 2016. <em>Black and British: A Forgotten History</em>. London: Pan Books.</p>
             </section>
-
           </section>
+
+					<section aria-labelledby="biography">
+						<h4 id="biography">Pathway Developer Biography</h4>
+
+					</section>
 
 					<section aria-labelledby="citation">
 						<h3 id="citation">Lesson Plan Citation (MLA)</h3>
