update reentering for bio

--- a/html/lesson_plans/seacole_recentering_nursing.html
+++ b/html/lesson_plans/seacole_recentering_nursing.html
@@ -69,6 +69,7 @@
                   <li><a href="#materials-5">Further Reading</a></li>
                 </ol>
               </li>
+              <li><a href="#biography">Pathway Developer Biography</a></li>
               <li><a href="#citation">Lesson Plan Citation (MLA)</a></li>
             </ol>
           </section>
@@ -213,8 +214,12 @@
               
               <p>Schultz, Jane E. 2004. <em>Women at the Front: Hospital Workers in Civil War America</em>. The University of North Carolina Press.</p>              
             </section>
-
           </section>
+
+          <section aria-labelledby="biography">
+						<h4 id="biography">Pathway Developer Biography</h4>
+
+					</section>
 
 					<section aria-labelledby="citation">
 						<h3 id="citation">Lesson Plan Citation (MLA)</h3>
