--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -69,7 +69,7 @@
 						<li><a href="/html/lesson_plans/seacole_decentering_britishness.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Decentering Britishness</a></li>
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Autobiographical Writing</a></li>
 						<li><a href="/html/lesson_plans/seacole_recentering_nursing.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Recentering Nursing in Wartime</a></li>
-						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Decolonizing Health(care)</a></li>
+						<li><a href="/html/lesson_plans/seacole_decolonizing_heathcare.html"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Decolonizing Health(care)</a></li>
 					</ul>
 				</section>
 
