update decol healthcare

--- a/html/lesson_plans/seacole_decolonizing_heathcare.html
+++ b/html/lesson_plans/seacole_decolonizing_heathcare.html
@@ -111,12 +111,12 @@
               <p><strong>Recommended Texts (full references below):</strong> Anionwu 2012; Anionwu, Staring, and Staring-Derks 2015; Chang 2017; Gilbert 2008; 2012; Jackson and Gracia 2014; Nightingale 1860; Seacole 1857; Sleeth 2018; Smith 2020; Wald 2008; “Mary Seacole (1805-1881)” 2017</p>
 
 							<aside class="breakout-quote">
-								<p>“But it was destined that I should not be long in Cruces before my medical skill and knowledge were put to the test. Before the passengers for Panama had been many days gone, it was found that they had left one of their number behind them, and that one – the cholera. I believe that the faculty have not yet come to the conclusion that the cholera is contagious, and I am not presumptuous enough to forestal them; but my people have always considered it to be so, and the poor Cruces folks did not hesitate to say that this new and terrible plague had been a fellow-traveller with the Americans from New Orleans or some other of its favoured haunts.”</p>
+								<p><em>“But it was destined that I should not be long in Cruces before my medical skill and knowledge were put to the test. Before the passengers for Panama had been many days gone, it was found that they had left one of their number behind them, and that one – the cholera. I believe that the faculty have not yet come to the conclusion that the cholera is contagious, and I am not presumptuous enough to forestal them; but my people have always considered it to be so, and the poor Cruces folks did not hesitate to say that this new and terrible plague had been a fellow-traveller with the Americans from New Orleans or some other of its favoured haunts.”</em></p>
+	
+								<p class="right">— Mary Seacole <br/><em>Wonderful Adventures of Mary Seacole in Many Lands</em> (1857), Chap. IV</p>
+							</aside>							
 
-								<p class="right">- Mary Seacole, <em>Wonderful Adventures of Mary Seacole in Many Lands</em>, Chap IV, 1857</p>
-							</aside>
-
-              <p><strong>Summary:</strong> The concept of germ theory, the idea that germs are linked to the spread of disease, was not widely accepted in western contexts until the late-nineteenth century, with the work of Louis Pasteur and Robert Koch, among others. Mary Seacole was a supporter of the validity of germ theory, and her discussions of infectious diseases such as cholera in <em>Wonderful Adventures of Mrs. Seacole in Many Lands </em>(particularly chapters II, IV, and VII) reflect her knowledge and experience of epidemics and outbreaks. In the British and American contexts in the late-nineteenth and early-twentieth centuries, debates surrounding diseases such as cholera were often linked to the identities of those infected. The spread of disease was frequently associated with marginalized groups, such as those living in poverty, racialized groups, women, or immigrant populations.</p>
+              <p><strong>Summary:</strong> The concept of germ theory, the idea that germs are linked to the spread of disease, was not widely accepted in western contexts until the late-nineteenth century, with the work of Louis Pasteur and Robert Koch, among others. Mary Seacole was a supporter of the validity of germ theory, and her discussions of infectious diseases such as cholera in <em>Wonderful Adventures of Mrs. Seacole in Many Lands </em>(particularly chapters II, IV, and VII) reflect her knowledge and experience of epidemics and outbreaks. In the British and American contexts in the late-nineteenth and early-twentieth centuries, debates surrounding diseases such as cholera were often linked to the identities of those infected. The spread of disease was frequently associated with marginalized groups, such as those living in poverty, racialized groups, women, or immigrant populations.</p>							
 
 							<p>This grouping examines how Seacole discusses disease and the spread of disease. A range of contextual and critical sources highlight links between race and disease in discussions of contagion, in both nineteenth-century contexts and today. This grouping also offers a starting point for a consideration of how practices of colonization and systemic racism continue to affect the ability of marginalized populations to access healthcare, as well as the quality of that care.</p>
             </section>
@@ -214,7 +214,7 @@
           </section>
 
 					<section aria-labelledby="biography">
-						<h4 id="biography">Pathway Developer Biography</h4>
+						<h3 id="biography">Pathway Developer Biography</h3>
 
 						<p>Breanna Simpson is a doctoral candidate and teaching assistant in the Department of English at York University in Toronto. Her research focuses on gender studies and queer theory, classical reception, world literature, and late Victorian fiction. Her dissertation, <em>In Pursuit of Cupid’s Daughter: The Construction and Control of Desire in Ancient and Victorian Narratives</em>, interrogates the concept of desire by examining forms and practices of reception, power, subjectivity, and identity.</p>
 					</section>
