update seacole pls

--- a/html/lesson_plans/seacole_decentering_britishness.html
+++ b/html/lesson_plans/seacole_decentering_britishness.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-    <title>Decentering Britishness (Lesson Plan) | Undisciplining the Victorian Classroom</title>
+    <title>Decentering Britishness | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="Foregrounds Mary Seacole’s complex positioning as a colonial subject of color and encourages critical discourse about “Britishness” as an identity category." />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
@@ -129,12 +129,12 @@
 						<h3 id="topics">Related Contemporary Topics</h3>
 
             <ul id="topic-list">
-							<li>globalization and imperialism</li>
-							<li>intersectionality and representation</li>
-							<li>minority entrepreneurship</li>
-							<li>race and national identity</li>
-							<li>public memorialization and histories of racial violence</li>
-							<li>collective memory and racial justice</li>
+							<li>Globalization and imperialism</li>
+							<li>Intersectionality and representation</li>
+							<li>Minority entrepreneurship</li>
+							<li>Race and national identity</li>
+							<li>Public memorialization and histories of racial violence</li>
+							<li>Collective memory and racial justice</li>
             </ul>
           </section>
 
