--- a/html/lesson_plans/seacole_decolonizing_heathcare.html
+++ b/html/lesson_plans/seacole_decolonizing_heathcare.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-    <title>Decolonizing Health(care) (Lesson Plan) | Undisciplining the Victorian Classroom</title>
+    <title>Decolonizing Health(care) | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="Focuses on Mary Seacole’s positioning in the history of medicine and its relation to the study, teaching, and practice of the “care” professions, esp. nursing."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
