--- a/html/lesson_plans/seacole_recentering_nursing.html
+++ b/html/lesson_plans/seacole_recentering_nursing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<title>Recentering Nursing in Wartime (Lesson Plan) | Undisciplining the Victorian Classroom</title>
+		<title>Recentering Nursing in Wartime | Undisciplining the Victorian Classroom</title>
 		<meta name="description" content="Offers students an expansive look at the professionalization of female nursing in British, transatlantic, and transnational combat zones." />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
