--- a/html/zoomcasts/aslami.html
+++ b/html/zoomcasts/aslami.html
@@ -47,22 +47,21 @@
 			<main id="main" aria-labelledby="zoomcast">
 					<h2 id="zoomcast">Zoomcast with Zarena Aslami</h2>
 
-					<section id="zoom-specs">
-						<div class="wrapper" aria-labelledby="aslami">
-							<div id="aslami" class="youtube" tabindex="0" data-embed="4_bqN5G6wcA" data-title="Zarena Aslami" data-id="aslami" data-alt="Head and shoulders image of Zarena Aslami">
-								<nav class="skipcontrols" aria-labelledby="skip-controls">
-									<a href="#text" id="skip-controls" tabindex="-1">skip video controls</a>
-								</nav>
-								<div class="play-button"></div>
-							</div>
+					<div class="wrapper" aria-labelledby="aslami">
+						<div id="aslami" class="youtube" tabindex="0" data-embed="4_bqN5G6wcA" data-title="Zarena Aslami" data-id="aslami" data-alt="Head and shoulders image of Zarena Aslami">
+							<nav class="skipcontrols" aria-labelledby="skip-controls">
+								<a href="#text" id="skip-controls" tabindex="-1">skip video controls</a>
+							</nav>
+							<div class="play-button"></div>
 						</div>
+					</div>
 
+					<section aria-labelledby="zoomcast-production-details">
+						<h3 id="zoomcast-production-details">Zoomcast Production Details</h3>				
 						<p id="text"><strong>Speakers:</strong> Zarena Aslami (guest), Pearl Chaozon Bauer (host)</p>
 						<p><strong>Date:</strong> March 17, 2021</p>
 						<p><strong>Length:</strong> 30:36</p>
 					</section>
-					
-					<hr/>
 					
 					<summary aria-labelledby="overview">
 						<h3 id="overview">Overview</h3>
