--- a/html/zoomcasts/hayward-reeder-brice.html
+++ b/html/zoomcasts/hayward-reeder-brice.html
@@ -47,22 +47,21 @@
 			<main id="main" aria-labelledby="zoomcast">
 				<h2 id="zoomcast">Zoomcast with Jennifer Hayward, Jessie Reeder & Michelle Prain Brice</h2>
 
-				<section id="zoom-specs">
-					<div class="wrapper" aria-labelledby="hayward-reeder-brice">
-						<div id="hayward-reeder-brice" class="youtube" tabindex="0" data-embed="of4W0Gsq2Hg" data-title="Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice" data-id="hayward-reeder-brice" data-alt="Head and shoulders images of Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice">
-							<nav class="skipcontrols" aria-labelledby="skip-controls">
-								<a href="#text" id="skip-controls" tabindex="-1">skip video controls</a>
-							</nav>
-							<div class="play-button"></div>
-						</div>
+				<div class="wrapper" aria-labelledby="hayward-reeder-brice">
+					<div id="hayward-reeder-brice" class="youtube" tabindex="0" data-embed="of4W0Gsq2Hg" data-title="Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice" data-id="hayward-reeder-brice" data-alt="Head and shoulders images of Jennifer Hayward, Jessie Reeder, and Michelle Prain Brice">
+						<nav class="skipcontrols" aria-labelledby="skip-controls">
+							<a href="#text" id="skip-controls" tabindex="-1">skip video controls</a>
+						</nav>
+						<div class="play-button"></div>
 					</div>
+				</div>
 
+				<section aria-labelledby="zoomcast-production-details">
+					<h3 id="zoomcast-production-details">Zoomcast Production Details</h3>
 					<p id="text"><strong>Speakers:</strong> Jennifer Hayward (guest), Jessie Reeder (guest), and Michelle Prain Brice (guest), Ryan Fong (host)</p>
 					<p><strong>Date:</strong> February 25, 2021</p>
 					<p><strong>Length:</strong> 35:39</p>
 				</section>
-
-				<hr/>
 
 				<summary aria-labelledby="overview">
 					<h3 id="overview">Overview</h3>
