--- a/html/zoomcasts/lootens.html
+++ b/html/zoomcasts/lootens.html
@@ -47,22 +47,21 @@
 			<main id="main" aria-labelledby="zoomcast">
 					<h2 id="zoomcast">Zoomcast with Tricia Lootens</h2>
 
-					<section id="zoom-specs">
-						<div class="wrapper" aria-labelledby="lootens">
-							<div id="lootens" class="youtube" tabindex="0" data-embed="Oq--vvowN6Q" data-title="Tricia Lootens" data-id="lootens" data-alt="Head and shoulders image of Tricia Lootens">
-								<nav class="skipcontrols" aria-labelledby="skip-controls">
-									<a href="#text" id="skip-controls" tabindex="-1">skip video controls</a>
-								</nav>
-								<div class="play-button"></div>
-							</div>
+					<div class="wrapper" aria-labelledby="lootens">
+						<div id="lootens" class="youtube" tabindex="0" data-embed="Oq--vvowN6Q" data-title="Tricia Lootens" data-id="lootens" data-alt="Head and shoulders image of Tricia Lootens">
+							<nav class="skipcontrols" aria-labelledby="skip-controls">
+								<a href="#text" id="skip-controls" tabindex="-1">skip video controls</a>
+							</nav>
+							<div class="play-button"></div>
 						</div>
+					</div>
 
+					<section aria-labelledby="zoomcast-production-details">
+						<h3 id="zoomcast-production-details">Zoomcast Production Details</h3>
 						<p id="text"><strong>Speakers:</strong> Tricia Lootens (guest), Pearl Chaozon Bauer (host)</p>
 						<p><strong>Date:</strong> January 29, 2021</p>
 						<p><strong>Length:</strong> 31:31</p>
 					</section>
-
-					<hr/>
 
 					<summary aria-labelledby="overview">
 						<h3 id="overview">Overview</h3>
