--- a/html/zoomcasts/rudy.html
+++ b/html/zoomcasts/rudy.html
@@ -47,22 +47,21 @@
 			<main id="main" aria-labelledby="zoomcast">
 					<h2 id="zoomcast">Zoomcast with Jason Rudy</h2>
 
-					<section id="zoom-specs">
-						<div class="wrapper" aria-labelledby="rudy">
-							<div id="rudy" class="youtube" tabindex="0" data-embed="YCd--HXr4nc" data-title="Jason Rudy" data-id="rudy" data-alt="Head and shoulders image of Jason Rudy">
-								<nav class="skipcontrols" aria-labelledby="skip-controls">
-									<a href="#text" id="skip-controls" tabindex="-1">skip video controls</a>
-								</nav>
-								<div class="play-button"></div>
-							</div>
+					<div class="wrapper" aria-labelledby="rudy">
+						<div id="rudy" class="youtube" tabindex="0" data-embed="YCd--HXr4nc" data-title="Jason Rudy" data-id="rudy" data-alt="Head and shoulders image of Jason Rudy">
+							<nav class="skipcontrols" aria-labelledby="skip-controls">
+								<a href="#text" id="skip-controls" tabindex="-1">skip video controls</a>
+							</nav>
+							<div class="play-button"></div>
 						</div>
+					</div>
 
+					<section aria-labelledby="zoomcast-production-details">
+						<h3 id="zoomcast-production-details">Zoomcast Production Details</h3>
 						<p id="text"><strong>Speakers:</strong> Jason Rudy (guest), Ryan Fong (host)</p>
 						<p><strong>Date:</strong> February 4, 2021</p>
 						<p><strong>Length:</strong> 40:50</p>	
 					</section>
-
-					<hr/>
 
 					<summary aria-labelledby="overview">
 						<h3 id="overview">Overview</h3>
