--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 				<section aria-labelledby="citation">
 					<h3 id="citation">Page Citation (MLA)</h3>
-					<p><strong>(MLA):</strong> Pearl Chaozon Bauer, Ryan Fong, Sophia Hsu, and Adrian S. Wisnicki, organizers. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org">https://undiscipliningvc.org</a>.</p>
+					<p>Pearl Chaozon Bauer, Ryan Fong, Sophia Hsu, and Adrian S. Wisnicki, organizers. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org">https://undiscipliningvc.org</a>.</p>
 				</section>
 
 			</main>
