--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -59,7 +59,7 @@
 
 				<section aria-labelledby="africa-1">
 					<h2 id="africa-1">Africa, Diaspora, and the British Empire #1</h2>
-					<div><a href=""><img loading="lazy" src="" sizes="" alt="" title=""/><span>Cluster Introduction</span></a></div>
+					<div><a href="/html/lesson_plans/africa_diaspora_empire_introduction.html"><img loading="lazy" src="" sizes="" alt="" title=""/><span>Cluster Introduction</span></a></div>
 				</section>
 
 				<section aria-labelledby="seacole-2">
@@ -77,12 +77,12 @@
 					<h2 id="africa-2">Africa, Diaspora, and the British Empire #2</h2>
 					<ul>
 						<li>Lesson Plans</li>
-						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> The Aftermath of Slavery</a></li>
-						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Colonial Landscapes and Travel Narratives</a></li>
-						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Ethiopianism</a></li>
-						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Slavery and Sexuality, Desire, and Family</a></li>
-						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Southern Africa, 1825-1930</a></li>
 						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Undisciplining the Dramatic Monologue</a></li>
+						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Colonial Landscapes and Travel Narratives</a></li>
+						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Southern Africa, 1825-1930</a></li>
+						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Ethiopianism</a></li>
+						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Archival Erasure and the Aftermath of Slavery</a></li>
+						<li><a href=""><i class="fa fa-book fa-fw" aria-hidden="true"></i> Slavery and Theories of Sexuality, Desire, and Family</a></li>
 					</ul>
 				</section>
 
