--- a/html/lesson_plans/lesson-plan-template.html
+++ b/html/lesson_plans/lesson-plan-template.html
@@ -167,7 +167,7 @@
 					</section>
 
 					<section aria-labelledby="citation">
-						<h3 id="citation">Lesson Plan Citation (MLA)</h3>
+						<h3 id="citation">Page/Pathway Citation (MLA)</h3>
 						<p>, pathway dev. “.” Kira Braham, Heidi Kaufman, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/.html">https://undiscipliningvc.org/html/lesson_plans/.html</a>.</p><!-- Change -->
 					</section>
 			</main>
