--- a/html/lesson_plans/seacole_autobiographical_writing.html
+++ b/html/lesson_plans/seacole_autobiographical_writing.html
@@ -231,7 +231,7 @@
 					</section>
 
 					<section aria-labelledby="citation">
-						<h3 id="citation">Lesson Plan Citation (MLA)</h3>
+						<h3 id="citation">Page/Pathway Citation (MLA)</h3>
 						<p>Heidi Kaufman, pathway dev. “Autobiographical Writing.” Kira Braham, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/seacole_autobiographical_writing.html">https://undiscipliningvc.org/html/lesson_plans/seacole_autobiographical_writing.html</a>.</p>
 					</section>
 			</main>
