--- a/html/lesson_plans/seacole_decentering_britishness.html
+++ b/html/lesson_plans/seacole_decentering_britishness.html
@@ -198,7 +198,7 @@
 					</section>
 
 					<section aria-labelledby="citation">
-						<h3 id="citation">Lesson Plan Citation (MLA)</h3>
+						<h3 id="citation">Page/Pathway Citation (MLA)</h3>
 						<p>Kira Braham, pathway dev. “Decentering Britishness.” Heidi Kaufman, Indu Ohri, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/decentering_britishness.html">https://undiscipliningvc.org/html/lesson_plans/decentering_britishness.html</a>.</p>
 					</section>
 			</main>
