--- a/html/lesson_plans/seacole_decolonizing_heathcare.html
+++ b/html/lesson_plans/seacole_decolonizing_heathcare.html
@@ -220,7 +220,7 @@
 					</section>
 
 					<section aria-labelledby="citation">
-						<h3 id="citation">Lesson Plan Citation (MLA)</h3>
+						<h3 id="citation">Page/Pathway Citation (MLA)</h3>
 						<p>Breanna Simpson, pathway dev. “Decolonizing Health(care).” Kira Braham, Heidi Kaufman, Indu Ohri, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/seacole_decolonizing_heathcare.html">https://undiscipliningvc.org/html/lesson_plans/seacole_decolonizing_heathcare.html</a>.</p>
 					</section>
 			</main>
