--- a/html/lesson_plans/seacole_recentering_nursing.html
+++ b/html/lesson_plans/seacole_recentering_nursing.html
@@ -223,7 +223,7 @@
 					</section>
 
 					<section aria-labelledby="citation">
-						<h3 id="citation">Lesson Plan Citation (MLA)</h3>
+						<h3 id="citation">Page/Pathway Citation (MLA)</h3>
 						<p>Indu Ohri, pathway dev. “Recentering Nursing in Wartime.” Kira Braham, Heidi Kaufman, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/seacole_recentering_nursing.html">https://undiscipliningvc.org/html/lesson_plans/seacole_recentering_nursing.html</a>.</p>
 					</section>
 			</main>
