add email title

--- a/html/lesson_plans/seacole_decolonizing_heathcare.html
+++ b/html/lesson_plans/seacole_decolonizing_heathcare.html
@@ -77,11 +77,11 @@
           <section aria-labelledby="lesson-plan-specs">
 						<h3 id="lesson-plan-specs">Pathway Production Details</h3>
 
-            <p><strong>Pathway Developer:</strong> Breanna Simpson <a href="mailto:bsimpson@yorku.ca?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i></a></p>
+            <p><strong>Pathway Developer:</strong> Breanna Simpson <a href="mailto:bsimpson@yorku.ca?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="email"></i></a></p>
 
             <p><strong>Collaborating Peer Reviewers:</strong> Kira Braham, Heidi Kaufman, Indu Ohri</p>
             
-            <p><strong>Cluster Developer:</strong> Adrian S. Wisnicki <a href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i></a></p>
+            <p><strong>Cluster Developer:</strong> Adrian S. Wisnicki <a href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="email"></i></a></p>
 
             <p><strong>Cluster Title:</strong> Mary Seacole and the Caribbean</p>
 
