--- a/html/lesson_plans/seacole_decentering_britishness.html
+++ b/html/lesson_plans/seacole_decentering_britishness.html
@@ -76,11 +76,11 @@
           <section aria-labelledby="lesson-plan-specs">
 						<h3 id="lesson-plan-specs">Pathway Production Details</h3>
 
-            <p><strong>Pathway Developer:</strong> Kira Braham <a href="mailto:kira.braham@vanderbilt.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i></a></p>
+            <p><strong>Pathway Developer:</strong> Kira Braham <a href="mailto:kira.braham@vanderbilt.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="email"></i></a></p>
 
             <p><strong>Collaborating Peer Reviewers:</strong> Heidi Kaufman, Indu Ohri, Breanna Simpson</p>
             
-            <p><strong>Cluster Developer:</strong> Adrian S. Wisnicki <a href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i></a></p>
+            <p><strong>Cluster Developer:</strong> Adrian S. Wisnicki <a href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="email"></i></a></p>
 
             <p><strong>Cluster Title:</strong> Mary Seacole and the Caribbean</p>
 
