update lps for email

--- a/html/lesson_plans/africa_diaspora_empire_introduction.html
+++ b/html/lesson_plans/africa_diaspora_empire_introduction.html
@@ -50,7 +50,7 @@
 					<section class="cluster-details" aria-labelledby="details">
 						<h3 id="details">Cluster Production Details</h3>
 
-						<p><strong>Cluster Developer:</strong> Sophia Hsu <a href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="email"></i></a></p>
+						<p><strong>Cluster Developer:</strong> Sophia Hsu <a href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
 
           	<p><strong>Pathway Developers:</strong>  Carolyn Betensky, Melissa Free, Sophia Hsu, Ji Eun Lee, Cherrie Kwok</p>
 
